update model answers
