# docs/swagger.json
@@ -113,14 +113,14 @@
                 }
             }
         },
-        "/answer/filter/{question_id}": {
+        "/answer/filter/{group_id}": {
             "get": {
                 "security": [
                     {
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "input: amswer's question_id =\u003e output:  amswers",
+                "description": "input: amswer's question group_id =\u003e output:  amswers list",
                 "consumes": [
                     "application/json"
                 ],
@@ -135,7 +135,7 @@
                     {
                         "type": "integer",
                         "description": "question_id",
-                        "name": "question_id",
+                        "name": "group_id",
                         "in": "path",
                         "required": true
                     }
@@ -1386,7 +1386,7 @@
                 "id": {
                     "type": "integer"
                 },
-                "question_id": {
+                "question_group": {
                     "type": "integer"
                 },
                 "score_anxiety": {
